// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValueRow Prebuilt Component KeyValueRow should render text with icons 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
      },
      [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Activity"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Key Text
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Add"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Value Text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`KeyValueRow Prebuilt Component KeyValueRow should render text with icons and tooltips 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
      },
      [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Activity"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Key Text
        </Text>
        <View
          accessibilityLabel="Sample Tooltip 2 tooltip"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 28,
              "justifyContent": "center",
              "opacity": 1,
              "width": 28,
            }
          }
        >
          <SvgMock
            color="#686e7d"
            fill="currentColor"
            height={20}
            name="Question"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Add"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Value Text
        </Text>
        <View
          accessibilityLabel="Sample Tooltip 2 tooltip"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 28,
              "justifyContent": "center",
              "opacity": 1,
              "width": 28,
            }
          }
        >
          <SvgMock
            color="#686e7d"
            fill="currentColor"
            height={20}
            name="Question"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`KeyValueRow Prebuilt Component KeyValueRow should render text with tooltips 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
      },
      [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Key Text
        </Text>
        <View
          accessibilityLabel="Sample Tooltip 1 tooltip"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 28,
              "justifyContent": "center",
              "opacity": 1,
              "width": 28,
            }
          }
        >
          <SvgMock
            color="#686e7d"
            fill="currentColor"
            height={20}
            name="Question"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Value Text
        </Text>
        <View
          accessibilityLabel="Sample Tooltip 2 tooltip"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 28,
              "justifyContent": "center",
              "opacity": 1,
              "width": 28,
            }
          }
        >
          <SvgMock
            color="#686e7d"
            fill="currentColor"
            height={20}
            name="Question"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`KeyValueRow Prebuilt Component KeyValueRow should render when there is only text 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
      },
      [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Sample Key Text
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="label"
        >
          Sample Value Text
        </Text>
      </View>
    </View>
  </View>
</View>
`;
